Fix dark mode for list group

--- a/MihuBot/wwwroot/app.css
+++ b/MihuBot/wwwroot/app.css
@@ -13,7 +13,7 @@ body, pre, .card, .modal-content, .form-control {
     color: color-mix(in srgb, CanvasText, Canvas 5%);
 }
 
-    .form-control:focus, .dropdown-menu, .dropdown-item, .close, .close:hover {
+    .form-control:focus, .dropdown-menu, .dropdown-item, .close, .close:hover, .list-group-item {
         background-color: color-mix(in srgb, Canvas, CanvasText 5%);
         color: color-mix(in srgb, CanvasText, Canvas 5%);
     }
@@ -27,7 +27,7 @@ body, pre, .card, .modal-content, .form-control {
 }
 
 a, .btn-link {
-    color: #006bb7;
+    color: #008fb7;
 }
 
 .btn-primary {
